# brave-core

./: Jenkinsfile  package-lock.json  package.json
.github/: CODEOWNERS
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: brave_strings.grd  generated_resources.grd  generated_resources_override.grd  media_live_preview_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp  settings_strings_override.grdp
app/resources/: chromium_strings_da.xtb  chromium_strings_eu.xtb  chromium_strings_hi.xtb  chromium_strings_ja.xtb
browser/: brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_prefs_browsertest.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/ai_chat/: ai_chat_settings_helper.cc
browser/android/: brave_sync_worker.cc
browser/brave_ads/: ads_service_factory.cc
browser/brave_rewards/android/: brave_rewards_native_worker.cc
browser/brave_shields/: ad_block_service_browsertest.cc  brave_shields_web_contents_observer.cc  domain_block_page_browsertest.cc
browser/brave_stats/: brave_stats_updater.cc
browser/brave_wallet/: BUILD.gn
browser/debounce/: debounce_browsertest.cc
browser/extensions/: brave_crx_generation_browsertest.cc
browser/extensions/api/: brave_rewards_api.cc
browser/first_run/: BUILD.gn  first_run.cc  first_run.h  first_run_unittest.cc
browser/first_run/android/: BUILD.gn  brave_first_run_utils.cc
browser/first_run/test/: BUILD.gn  first_run_unittest.cc
browser/metrics/: BUILD.gn  brave_metrics_service_accessor.h  metrics_util.cc  metrics_util.h  pref_names.h  switches.h
browser/metrics/test/: BUILD.gn  enabled_state_provider_unittest.cc  metrics_util_unittest.cc
browser/net/: ipfs_redirect_network_delegate_helper.cc  ipfs_redirect_network_delegate_helper.cc.orig  ipfs_redirect_network_delegate_helper_unittest.cc  ipfs_redirect_network_delegate_helper_unittest.cc.orig
browser/profiles/: brave_profile_manager.cc
browser/speedreader/: speedreader_browsertest.cc  speedreader_tab_helper.cc
browser/tor/: brave_tor_browsertest.cc
browser/ui/: BUILD.gn  brave_shields_data_controller.cc  wallet_bubble_manager_delegate_impl.cc
browser/ui/tabs/: shared_pinned_tab_service.cc
browser/ui/views/: crash_report_permission_ask_dialog_view.cc  session_crashed_bubble_view_unittest.cc
browser/ui/webui/: brave_rewards_page_ui.cc
browser/widevine/: BUILD.gn  sources.gni
chromium_src/components/crx_file/: crx_verifier.cc  (+1 more)
components/: arc_strings.grdp  autofill_payments_strings.grdp  autofill_strings.grdp  commerce_strings.grdp  compose_strings.grdp  history_strings.grdp  new_or_sad_tab_strings.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  permissions_strings.grdp  policy_strings.grdp  privacy_sandbox_chrome_strings.grdp  site_settings_strings.grdp
components/api_request_helper/: api_request_helper.cc
components/brave_sync/: qr_code_data.cc  time_limited_words.cc  time_limited_words.h
components/deprecated_channel_name/: BUILD.gn  channel_name.cc
components/p3a/: metric_names.h
components/resources/: BUILD.gn  ai_chat_ui_strings.grdp  brave_components_resources.grd  wallet_strings.grdp
components/search_engines/: brave_prepopulated_engines.cc
components/webcompat_exceptions/: BUILD.gn  webcompat_constants.h  webcompat_exceptions_service.cc  webcompat_exceptions_service.h
ios/app/: BUILD.gn  brave_core_main.mm
ios/brave-ios/: Package.swift
ios/browser/: BUILD.gn
patches/: base-BUILD.gn.patch  base-threading-thread_restrictions.h.patch  build-android-gyp-proguard.py.patch  build-config-android-config.gni.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-src-org-chromium-chrome-browser-privacy-settings-PrivacySettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedRootUiCoordinator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-android-browsing_data-browsing_data_bridge.cc.patch  chrome-browser-browser_process_impl.h.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.cc.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-net-profile_network_context_service.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.h.patch  chrome-browser-resources-history-BUILD.gn.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-privacy_page-privacy_page.ts.patch  chrome-browser-resources-settings-route.ts.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-resources-settings-site_settings_page-site_settings_page.ts.patch  chrome-browser-resources-side_panel-bookmarks-BUILD.gn.patch  chrome-browser-safe_browsing-download_protection-check_client_download_request_base.cc.patch  chrome-browser-storage_access_api-storage_access_grant_permission_context.cc.patch  chrome-browser-sync-sync_service_factory.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-android-toolbar-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-browser_navigator.cc.patch  (+97 more)
patches/v8/: BUILD.gn.patch  src-codegen-compiler.cc.patch
test/: BUILD.gn
test/base/: testing_brave_browser_process.cc  testing_brave_browser_process.h
test/filters/: browser_tests.filter  unit_tests.filter
(+292 files in other folders)
