# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("first_run") {
  visibility = [
    "android",
    "test:unit_tests",
    "//chrome/browser",
  ]

  sources = [
    "first_run.cc",
    "first_run.h",
  ]

  deps = [
    "//brave/browser/metrics",
    "//chrome/common",
  ]
  public_deps = [ "//base" ]
}
