# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("metrics") {
  sources = [
    "metrics_util.cc",
    "metrics_util.h",
    "pref_names.h",
    "switches.h",
  ]

  deps = [
    "//chrome/browser:browser_process",
    "//components/prefs",
  ]
}
