# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")

source_set("core") {
  sources = [
    "webcompat_exceptions_service.cc",
    "webcompat_exceptions_service.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_component_updater/browser",
    "//brave/components/webcompat_exceptions:common",
    "//brave/extensions:common",
  ]
}

source_set("common") {
  sources = [ "webcompat_constants.h" ]

  deps = [
    "//base",
    "//brave/components/brave_shields/core/common:mojom",
  ]
}
